--- a/q1/q1.ipynb
+++ b/q1/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,11 @@
       "Eigenvalues:  [-0.37228132  5.37228132]\n",
       "Eigenvectors: [-0.82456484  0.56576746] [-0.41597356 -0.90937671]\n",
       "Determinant:  -2\n",
-      "Cross product: [-3  6 -3]\n"
+      "Cross product: [-3  6 -3]\n",
+      "Solution: \n",
+      " [[ 0.06666667 10.2       ]\n",
+      " [-0.13333333  1.6       ]\n",
+      " [ 0.4         4.2       ]]\n"
      ]
     }
    ],
@@ -35,10 +39,10 @@
     "    vec2 = np.array([4,5,6])\n",
     "    print(\"Cross product:\", np.cross(vec1, vec2))\n",
     "    \n",
+    "    a1 = np.array([[1,2,-2],[2,1,-5],[1,-4,1]])\n",
+    "    a2 = np.array([[-1,5],[-2,1],[1,8]])\n",
     "    \n",
-    "    \n",
-    "\n",
-    "\n",
+    "    print(\"Solution: \\n\", np.linalg.solve(a1,a2))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
