--- a/q2/q2.ipynb
+++ b/q2/q2.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1 0 1 0 1]\n",
-      " [1 1 1 0 1 0]\n",
-      " [1 1 0 1 0 0]]\n",
-      "[1 1 0 0 1 0]\n"
+      "doc 1 = 0.58\n",
+      "doc 2 = 0.87\n",
+      "doc 3 = 0.67\n"
      ]
     }
    ],
@@ -24,7 +23,18 @@
     "    docs = np.array([[1,1,0,1,0,1],[1,1,1,0,1,0],[1,1,0,1,0,0]])\n",
     "    query = np.array([1,1,0,0,1,0])\n",
     "\n",
-    "    \n",
+    "    # doc 벡터 크기 계산\n",
+    "    docs_norm = np.linalg.norm(docs, axis=1)\n",
+    "    # query 벡터 크기 계산\n",
+    "    query_norm = np.linalg.norm(query)\n",
+    "    # 내적 계산\n",
+    "    inner_product = np.dot(docs, query)\n",
+    "    # 코사인 유사도 계산\n",
+    "    cos_sim = inner_product / (docs_norm * query_norm)\n",
+    "\n",
+    "    for i in range(len(cos_sim)):\n",
+    "        print(\"doc\",i+1,\"=\", format(cos_sim[i],\".2f\"))\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
