--- a/q3/q3.ipynb
+++ b/q3/q3.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "---------------------------------------\n",
+      "        unit price  number\n",
+      "store1        1000      25\n",
+      "store2         280     120\n",
+      "store3         900      30\n",
+      "---------------------------------------\n",
+      "        unit price  number  total price\n",
+      "store1        1000      25        25000\n",
+      "store2         280     120        33600\n",
+      "store3         900      30        27000\n",
+      "---------------------------------------\n",
       "        unit price  number  total price\n",
       "store2         280     120        33600\n",
-      "store3         900      30        27000\n"
+      "store3         900      30        27000\n",
+      "---------------------------------------\n"
      ]
     }
    ],
@@ -24,12 +36,19 @@
     "    # 데이터 프레임 만들기\n",
     "    arr = np.array([[1000,25],[280,120],[900,30]])\n",
     "    df = pd.DataFrame(arr,index=['store1','store2','store3'],columns=['unit price','number'])\n",
+    "    print('---------------------------------------')\n",
+    "    print(df)\n",
+    "    print('---------------------------------------')\n",
     "    # 연산\n",
     "    df['total price'] = df['unit price'] * df['number']\n",
+    "    print(df)\n",
+    "    print('---------------------------------------')\n",
+    "\n",
     "    # 정렬\n",
     "    df = df.sort_values(by='total price',ascending=False)\n",
     "    # 비싼거 2개만 출력\n",
     "    print(df.head(2))\n",
+    "    print('---------------------------------------')\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
