--- a/q1/q1.ipynb
+++ b/q1/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,12 @@
      "output_type": "stream",
      "text": [
       "Eigenvalues:  [-0.37228132  5.37228132]\n",
-      "Eigenvectors: [-0.82456484  0.56576746] [-0.41597356 -0.90937671]\n",
+      "Eigenvectors: [[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n",
       "Determinant:  -2\n",
       "Cross product: [-3  6 -3]\n",
       "Solution: \n",
-      " [[ 0.06666667 10.2       ]\n",
-      " [-0.13333333  1.6       ]\n",
-      " [ 0.4         4.2       ]]\n"
+      " [-1. -4.  3.]\n"
      ]
     }
    ],
@@ -32,7 +31,8 @@
     "    determinant = format(determinant,\".0f\")\n",
     "\n",
     "    print(\"Eigenvalues: \", eigenvalues)\n",
-    "    print(\"Eigenvectors:\", eigenvectors[:,0], eigenvectors[:,1])\n",
+    "    # print(\"Eigenvectors:\", eigenvectors[:,0], eigenvectors[:,1])\n",
+    "    print(\"Eigenvectors:\", eigenvectors)\n",
     "    print(\"Determinant: \", determinant)\n",
     "\n",
     "    vec1 = np.array([1,2,3])\n",
@@ -40,7 +40,7 @@
     "    print(\"Cross product:\", np.cross(vec1, vec2))\n",
     "    \n",
     "    a1 = np.array([[1,2,-2],[2,1,-5],[1,-4,1]])\n",
-    "    a2 = np.array([[-1,5],[-2,1],[1,8]])\n",
+    "    a2 = np.array([-15,-21,18])\n",
     "    \n",
     "    print(\"Solution: \\n\", np.linalg.solve(a1,a2))\n",
     "\n",
